sample/istio-gin-test-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-gin-test
  namespace: istio-gin-test
  labels:
    app: istio-gin-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: istio-gin-test
  template:
    metadata:
      name: istio-gin-test
      labels:
        app: istio-gin-test
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: istio-gin-test
          image: shaxiaozz/istio-gin-test:v0.1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: istio-gin-test
  namespace: istio-gin-test
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: istio-gin-test
