sample/istio-gin-test-fe-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-gin-test-fe
  namespace: istio-gin-test
  labels:
    app: istio-gin-test-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: istio-gin-test-fe
  template:
    metadata:
      name: istio-gin-test-fe
      labels:
        app: istio-gin-test-fe
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: istio-gin-test-fe
          image: shaxiaozz/istio-gin-test:fe-v0.1
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /index.html
              port: 80
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 10
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /index.html
              port: 80
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 10
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: istio-gin-test-fe
  namespace: istio-gin-test
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: istio-gin-test-fe
