sample/istio-gin-test-cross-route-fix.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-gin-test-route
  namespace: istio-gin-test
spec:
  hosts:
  - "istio-gin-test.test.com"
  gateways:
  - istio-gin-test-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: istio-gin-test
        port:
          number: 8080
    corsPolicy:
      allowOrigins:
      - exact: http://istio-gin-test-cross.test.com:32554
      allowMethods:
      - POST
      - GET
      - PUT
      - DELETE
      - OPTIONS
      allowCredentials: true
      allowHeaders:
      - "*"
      maxAge: "24h"
