sample/istio-gin-test-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-gin-test-route-fe
  namespace: istio-gin-test
spec:
  hosts:
  - "istio-gin-test.test.com"
  gateways:
  - istio-gin-test-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: istio-gin-test-fe
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-gin-test-route
  namespace: istio-gin-test
spec:
  hosts:
  - "istio-gin-test.test.com"
  gateways:
  - istio-gin-test-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: istio-gin-test
        port:
          number: 8080
